--- a/server/package.json
+++ b/server/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "repository": "https://github.com/ohadch/supplying-admin.git",
   "author": "Ohad <ohad@salaryo.com>",
-  "license": "MIT",
   "scripts": {
-    "start": "node 'dist/server.js'",
+    "start": "node 'dist/index.js'",
     "build": "tsc -p . && ncp src/schema dist/schema",
     "start:dev": "yarn build:dev",
-    "build:dev": "nodemon 'src/server.ts' --exec 'ts-node' src/server.ts -e ts,graphql"
+    "build:dev": "nodemon 'src/index.ts' --exec 'ts-node' src/index.ts -e ts,graphql"
   },
   "dependencies": {
     "apollo-server-express": "^2.25.2",
