--- a/server/package.json
+++ b/server/package.json
@@ -12,13 +12,18 @@
   },
   "dependencies": {
     "apollo-server-express": "^2.25.2",
+    "class-validator": "^0.13.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "graphql": "^15.5.1"
+    "graphql": "^15.5.1",
+    "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.3.0",
+    "@types/uuid": "^8.3.1",
     "graphql-import-node": "^0.0.4",
     "graphql-tools": "^7.0.5",
     "nodemon": "^2.0.10",
