--- a/client/package.json
+++ b/client/package.json
@@ -6,10 +6,14 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "apollo-boost": "^0.4.9",
+    "graphql": "^15.5.1",
     "react": "^17.0.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.0"
   },
   "devDependencies": {
+    "@types/graphql": "^14.5.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react-refresh": "^1.3.1",
